<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_text_title">タイトル</string>
    <string name="edit_text_term">期間</string>
    <string name="edit_text_priority">重要度</string>
    <string name="edit_button_regist">登録</string>
    <string name="edit_text_startDate">開始日</string>
    <string name="edit_text_endDate">終了日</string>
    <string name="edit_text_detail">詳細</string>

</resources>